--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
+baseURL = 'https://nord-nord-sec.de'
+languageCode = 'de-DE'
+title = 'Nord-Nord-Sec'
 theme = 'ananke'
