--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://nord-nord-sec.de'
 languageCode = 'de-DE'
-title = 'Nord-Nord-Sec'
+title = 'Nord-Nord-Sec | Der Cybersecurity Newsletter aus dem Norden'
 theme = 'ananke'
